fix: 修正TestAiService适配新结构，删除废弃引用